<resources>
    <string name="app_name">AndroidQuiz</string>
    <string name="todo">TODO</string>
    <string name="splashScreen">WELCOME!</string>
    <string-array name="user_Type">
        <item>Choose one: </item>
        <item>Broker</item>
        <item>Agent</item>
        <item>Dealer</item>
        <item>Private</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tab_logIn">Log In</string>
    <string name="tab_signUp">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="user_prompt">Choose User Type</string>
    <string name="Name">Name</string>
    <string name="Number">Number</string>
    <string name="edit">Edit</string>
    <string name="userType">User Type</string>
    <string name="logOut">Log Out</string>
    <string name="edit_mobile_number">Edit Mobile Number:</string>
</resources>
