<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_marginTop="50dp"

    tools:context="com.maslianah.my.androidquiz.logInTab">

    <EditText
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:paddingLeft="48dp"
        android:textSize="14sp"

        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:id="@+id/email"/>

    <EditText
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:paddingLeft="48dp"
        android:textSize="14sp"

        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/email"
        android:id="@+id/password"/>
    <!-- android:background="@drawable/password_input" -->
    <Button
        android:text="@string/Log_In"
        android:textStyle="bold"
        android:layout_width="282dp"
        android:textColor="#ffffff"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_marginTop="23dp"
        android:background="@color/FireBrick"
        android:id="@+id/submit"
        android:layout_below="@id/password"
        android:layout_alignLeft="@id/password"
        android:layout_alignStart="@id/password"
        />

</RelativeLayout>
